[gd_scene load_steps=75 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://sonic1.png" type="Texture" id=2]
[ext_resource path="res://HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://SwordHitBox.gd" type="Script" id=4]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=6]
[ext_resource path="res://switchPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Music and Sounds/attaquesonic.wav" type="AudioStream" id=8]
[ext_resource path="res://Music and Sounds/roll.wav" type="AudioStream" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.50034
height = 4.56378

[sub_resource type="Animation" id=2]
resource_name = "AttackDown"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 75, 76, 77, 78, 79, 80, 81, 82 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackAnimationFinished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/SwordHitBox/Hit:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}, {
"end_offset": 1.70506,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1, 0.101 )
}

[sub_resource type="Animation" id=3]
resource_name = "AttackLeft"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 92, 93, 94, 95, 96, 97, 98 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackAnimationFinished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/SwordHitBox/Hit:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}, {
"end_offset": 1.79951,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1, 0.101 )
}

[sub_resource type="Animation" id=4]
resource_name = "AttackRight"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 105, 106, 107, 108, 109, 110, 111 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackAnimationFinished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/SwordHitBox/Hit:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}, {
"end_offset": 1.80039,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1, 0.101 )
}

[sub_resource type="Animation" id=5]
resource_name = "AttackUp"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 84, 85, 86, 87, 88, 89, 90, 91 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackAnimationFinished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBoxPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBoxPivot/SwordHitBox/Hit:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
}, {
"end_offset": 1.71717,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1, 0.101 )
}

[sub_resource type="Animation" id=6]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 42 ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 66 ]
}

[sub_resource type="Animation" id=10]
resource_name = "RollDown"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 74, 73, 72, 71 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ROLLAnimationFinished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 1.73786,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=11]
resource_name = "RollLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 59, 60 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ROLLAnimationFinished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 1.72022,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=12]
resource_name = "RollRight"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 54, 55, 56 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ROLLAnimationFinished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 1.73829,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=13]
resource_name = "RollUp"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 71, 72, 73, 74 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ROLLAnimationFinished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 1.73503,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=14]
resource_name = "RunLeft"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38 ]
}

[sub_resource type="Animation" id=15]
resource_name = "RunRight"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Sleep"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20 ]
}

[sub_resource type="Animation" id=17]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 43, 44, 45, 46, 47, 48, 49, 50, 46 ]
}

[sub_resource type="Animation" id=18]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27, 28, 25 ]
}

[sub_resource type="Animation" id=19]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 4 ]
}

[sub_resource type="Animation" id=20]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65, 66, 67, 68, 69, 70 ]
}

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "AttackRight"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "AttackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=25]
blend_point_0/node = SubResource( 21 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 22 )
blend_point_1/pos = Vector2( 0, 1.2 )
blend_point_2/node = SubResource( 23 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 24 )
blend_point_3/pos = Vector2( 0, -1.2 )
min_space = Vector2( -1, -1.2 )
max_space = Vector2( 1, 1.2 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=30]
blend_point_0/node = SubResource( 26 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 27 )
blend_point_1/pos = Vector2( 0, 1.2 )
blend_point_2/node = SubResource( 28 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 29 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.2 )
max_space = Vector2( 1, 1.2 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "RollLeft"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "RollDown"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "RollRight"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "RollUp"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "RollUp"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "RollDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=37]
blend_point_0/node = SubResource( 31 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 32 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 33 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 34 )
blend_point_3/pos = Vector2( 0, -1.1 )
blend_point_4/node = SubResource( 35 )
blend_point_4/pos = Vector2( 0, -1.1 )
blend_point_5/node = SubResource( 36 )
blend_point_5/pos = Vector2( 0, 1.1 )
min_space = Vector2( -1, -1.2 )
max_space = Vector2( 1, 1.2 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=42]
blend_point_0/node = SubResource( 38 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 39 )
blend_point_1/pos = Vector2( 0, 1.2 )
blend_point_2/node = SubResource( 40 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 41 )
blend_point_3/pos = Vector2( 0, -1.2 )
min_space = Vector2( -1, -1.2 )
max_space = Vector2( 1, 1.2 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "Sleep"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "Sleep"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "Sleep"

[sub_resource type="AnimationNodeBlendSpace2D" id=46]
blend_point_0/node = SubResource( 43 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 44 )
blend_point_1/pos = Vector2( 0, 0.1 )
blend_point_2/node = SubResource( 45 )
blend_point_2/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=51]
blend_point_0/node = SubResource( 47 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 48 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 49 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 50 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachine" id=62]
states/Attack/node = SubResource( 25 )
states/Attack/position = Vector2( 595, 311 )
states/Idle/node = SubResource( 30 )
states/Idle/position = Vector2( 595, 197 )
states/Roll/node = SubResource( 37 )
states/Roll/position = Vector2( 309, 197 )
states/Run/node = SubResource( 42 )
states/Run/position = Vector2( 570, 60 )
states/Sleep/node = SubResource( 46 )
states/Sleep/position = Vector2( 748, 48 )
states/Walk/node = SubResource( 51 )
states/Walk/position = Vector2( 892, 197 )
transitions = [ "Idle", "Walk", SubResource( 52 ), "Walk", "Idle", SubResource( 53 ), "Idle", "Attack", SubResource( 54 ), "Attack", "Idle", SubResource( 55 ), "Roll", "Idle", SubResource( 56 ), "Idle", "Roll", SubResource( 57 ), "Run", "Idle", SubResource( 58 ), "Idle", "Run", SubResource( 59 ), "Sleep", "Idle", SubResource( 60 ), "Idle", "Sleep", SubResource( 61 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=63]

[sub_resource type="CapsuleShape2D" id=64]
radius = 11.1653
height = 32.4701

[sub_resource type="CapsuleShape2D" id=65]
radius = 13.58
height = 9.39947

[node name="Player" type="KinematicBody2D"]
position = Vector2( -0.736816, -8.36476 )
collision_layer = 2147483650
collision_mask = 2147483649
script = ExtResource( 1 )

[node name="switchPlayer" parent="." instance=ExtResource( 7 )]

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 1.41582, 18.9955 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 6
hframes = 21
frame = 42

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.793, 14 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 2 )
anims/AttackLeft = SubResource( 3 )
anims/AttackRight = SubResource( 4 )
anims/AttackUp = SubResource( 5 )
anims/IdleDown = SubResource( 6 )
anims/IdleLeft = SubResource( 7 )
anims/IdleRight = SubResource( 8 )
anims/IdleUp = SubResource( 9 )
anims/RollDown = SubResource( 10 )
anims/RollLeft = SubResource( 11 )
anims/RollRight = SubResource( 12 )
anims/RollUp = SubResource( 13 )
anims/RunLeft = SubResource( 14 )
anims/RunRight = SubResource( 15 )
anims/Sleep = SubResource( 16 )
anims/WalkDown = SubResource( 17 )
anims/WalkLeft = SubResource( 18 )
anims/WalkRight = SubResource( 19 )
anims/WalkUp = SubResource( 20 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 62 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 63 )
parameters/Attack/blend_position = Vector2( 0, 1 )
parameters/Idle/blend_position = Vector2( 0, 1 )
parameters/Roll/blend_position = Vector2( 0, 1 )
parameters/Run/blend_position = Vector2( 0, 0 )
parameters/Sleep/blend_position = Vector2( -0.00255316, 0.00578034 )
parameters/Walk/blend_position = Vector2( 0, 1 )

[node name="HitBoxPivot" type="Position2D" parent="."]
position = Vector2( -0.117985, 1.64031 )
rotation = -1.5708

[node name="SwordHitBox" parent="HitBoxPivot" instance=ExtResource( 3 )]
position = Vector2( 12, 0 )
collision_mask = 8
script = ExtResource( 4 )

[node name="Hit" parent="HitBoxPivot/SwordHitBox" index="0"]
visible = false
position = Vector2( 6.18073, -0.420975 )
shape = SubResource( 64 )
disabled = true

[node name="HurtBox" parent="." instance=ExtResource( 5 )]
collision_layer = 4

[node name="HurtOutch" parent="HurtBox" index="0"]
position = Vector2( 0.93644, 8.0534 )
shape = SubResource( 65 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HitBoxPivot/SwordHitBox"]

[editable path="HurtBox"]
